Fixed margin on tablet testimonies

--- a/src/css/index-tablet.css
+++ b/src/css/index-tablet.css
@@ -25,7 +25,7 @@
     justify-content: center;
   }
   .testimony-text-container {
-    margin: 0 18rem;
+    margin: 0 20vw;
   }
 
   /* Section 3: Pocket Guy */
